--- a/.github/workflows/build-debug.yml
+++ b/.github/workflows/build-debug.yml
@@ -3,10 +3,10 @@ name: Build Debug
 on:
   push:
     branches:
-      - master
+      - main
   pull_request:
     branches:
-      - '*'
+      - main
 
 jobs:
   build:
