--- a/.github/workflows/build-debug.yml
+++ b/.github/workflows/build-debug.yml
@@ -21,7 +21,9 @@ jobs:
         java-version: 1.8
 
     - name: Make gradlew executable
-      run: chmod +x ./gradlew
+      run:  | 
+             chmod +x ./gradlew
+             echo $ANDROID_SDK_ROOT
 
     - name: Build debug APK
       run: ./gradlew assembleDebug
