--- a/.github/workflows/build-debug.yml
+++ b/.github/workflows/build-debug.yml
@@ -32,4 +32,5 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: app-debug
-        path: app/build/outputs/apk/debug/app-debug.apk
+        path: /usr/local/lib/android/sdk 
+        # app/build/outputs/apk/debug/app-debug.apk
